# EA_COM_Automation

./: .env copy.example  .gitignore  CLAUDE.md  README.md  README_INSTALLATION.md  pyproject.toml  requirements.txt  run_tests_windows.py
api_documentation/: enterprise-architect-object-model.txt
docs/: EA_HOW_TO_USE.md  EA_INTERNAL_ERROR_FIX.md
ea_automation/: __init__.py  connectors.py  diagrams.py  elements.py  exceptions.py  json_io.py  logging_conf.py  packages.py  repository.py  utils.py
examples/: bdd_test_scenario.md  coffee_machine.json
scripts/: add_blocks.py  build_from_json.py  create_bdd.py  create_ea_packages.py  diagnose_ea.py  ea_workaround.py  init_project.py  test_bdd_demo.py  test_ea_simple.py
src/: ea_connector.py  packages.py  repository.py
test_reports/: summary_20250819_125847.json  summary_20250819_165441.json
test_reports/html/: report_20250819_125839.html  report_20250819_165435.html
test_reports/junit/: results_20250819_125839.xml  results_20250819_165435.xml
tests/: HOW_TO_TEST.md  conftest.py  manual_connection_test.py  manual_package_test.py  test_cli_mock.py  test_ea_connection.py
tests/integration/: test_full_workflow.py
tests/test_reports/: 20251908-0825-testlog
tests/unit/: test_elements.py  test_json_io.py
